# Visualiser

./: CMakeLists.txt  LICENSE  README.md  config.json
assets/shaders/: cube.frag  cube.vert  quad.frag  quad.vert
src/: app.cpp  app.h  camera.cpp  camera.h  cube.cpp  cube.h  main.cpp  quad.cpp  quad.h
src/gl/: glObjects.cpp  glObjects.h
src/gl/stb_image/: stb_image.h
